--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -22,6 +22,7 @@
 .socialButtonImg {
     width: 4vw;
     height: auto;
-    border-radius: 2.2vh;
+    border-radius: 5vh;
+    border: .5vh solid rgb(227, 227, 227);
     margin: 0 1vw 0 1vw;
 }
